--- a/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Config/DefaultEngine.ini
+++ b/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Config/DefaultEngine.ini
@@ -42,3 +42,8 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/BackRoom/Scenes/Level0.Level0
+GameDefaultMap=/Game/BackRoom/Scenes/Level0.Level0
+GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
+
