--- a/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -314,7 +314,7 @@ StaticMeshActor=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 SlideDoor_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BP_Key_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BP_SlideDoor_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
-K2Node_VariableGet=GameMapsSettings.DefaultModes.SelectedGameModeDetails
+K2Node_VariableGet=GameMapsSettings.DefaultModes.SelectedGameModeDetails,SkeletalMeshComponent.Physics.ConstraintsGroup
 BoxComponent=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BP_Sword_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BP_Shield_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
@@ -344,11 +344,11 @@ MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 VRPawn_C=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 FloatingPawnMovement=GameMapsSettings.DefaultModes.SelectedGameModeDetails
-K2Node_VariableSet=GameMapsSettings.DefaultModes.SelectedGameModeDetails
+K2Node_VariableSet=GameMapsSettings.DefaultModes.SelectedGameModeDetails,SkeletalMeshComponent.Physics.ConstraintsGroup
 BrushComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 NavMeshBoundsVolume=GameMapsSettings.DefaultModes.SelectedGameModeDetails
-SkeletalMeshComponent=
-BP_Entity_C=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
+BP_Entity_C=
 PawnSensingComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 CapsuleComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 SynthesisEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -413,9 +413,10 @@ LogVisualizerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enha
 AutomationTestSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayDebuggerUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
+CharacterMovementComponent=GameMapsSettings.DefaultModes.SelectedGameModeDetails,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/BackRoom/Scenes/Level0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2191,6 +2192,7 @@ InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -3233,7 +3235,6 @@ AutomationTestSettings.ExternalTools=True
 AutomationTestSettings.Screenshots=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
-InterchangeFbxSettings.FBX =True
 TakeRecorderProjectSettings.影片场景镜头试拍设置=True
 TakeRecorderProjectSettings.麦克风音频录制器=True
 TakeRecorderProjectSettings.音频输入设备=True
@@ -3603,8 +3604,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
