--- a/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE55_VR0001_Source_WK11_BonusPack/UE55_VR0001_Source_WK11_BonusPack/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -348,7 +348,7 @@ K2Node_VariableSet=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Skeleta
 BrushComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 NavMeshBoundsVolume=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
-BP_Entity_C=
+BP_Entity_C=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 PawnSensingComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 CapsuleComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 SynthesisEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -3240,6 +3240,20 @@ TakeRecorderProjectSettings.麦克风音频录制器=True
 TakeRecorderProjectSettings.音频输入设备=True
 TakeRecorderProjectSettings.动画录制器=True
 TakeRecorderProjectSettings.世界录制器=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game
@@ -3604,8 +3618,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
